--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
   <h1><a href=" / " style="color:#2c3e50;">Othmane Sebbouh</a></h1>
-  <a href=" / "><img src="othmane_sebbouh.jpeg "></a>
+  <a href=" / "><img src="images/othmane_sebbouh.png "></a>
   <!--<h3>research scientist<br><small>at <a href="https://www.google.com/" title="Google">Google</a></small></h3>
   <h3>director (2018-2020)<br><small>of the <a href="https://iacr.org" title="IACR">IACR</a></small></h3>
   <h3>co-editor (since 2016)<br><small>of the <a href="https://eprint.iacr.org" title="ePrint">Cryptology ePrint Archive</a></small></h3>-->
