--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Othmane Sebbouh&#39;s Homepage</title>
-  <meta name="description" content="Othmane Sebbouh's Professional Homepage
+  <title>d^2&#39;s Homepage</title>
+  <meta name="description" content="d^2's Professional Homepage
 ">
   <link rel="stylesheet" href="main.css ">
   <link rel="canonical" href="/">
@@ -19,7 +19,7 @@
     <div class="wrapper">
 
     <header>
-  <h1><a href=" / " style="color:#2c3e50;">Othmane Sebbouh</a></h1>
+  <h1><a href=" / " style="color:#2c3e50;">d^2</a></h1>
   <a href=" / "><img src="images/othmane_sebbouh.png "></a>
   <!--<h3>research scientist<br><small>at <a href="https://www.google.com/" title="Google">Google</a></small></h3>
   <h3>director (2018-2020)<br><small>of the <a href="https://iacr.org" title="IACR">IACR</a></small></h3>
