--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </section>
 <section>
   <h3>About me</h3>
-  <p> I am a PhD Student at ENS Paris, CREST-ENSAE and CNRS, where I am working under the supervision of <a href="http://www.gpeyre.com/" target=&ldquo;blank&rdquo;>Gabriel Peyré</a> and <a href="https://marcocuturi.net/" target=&ldquo;blank&rdquo;>Marco Cuturi</a>. My field of research is machine learning, with a special emphasis on optimization and optimal transport.</p>
+  <p> This is the webpage of the d^2 research group, part of the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford</a>, supervised by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a>.</p>
 
   In the summer of 2021, I worked with <I> <a href="https://twitter.com/nathanbenaich" target=&ldquo;blank&rdquo;>Nathan Benaich</a></I> and <I> <a href="https://twitter.com/soundboy" target=&ldquo;blank&rdquo;>Ian Hogarth</a></I> on the <I> <a href="https://www.stateof.ai/" target=&ldquo;blank&rdquo;>State of AI Report 2021</a></I>. The State of AI Report analyses the most interesting developments in AI from four perspectives: research, talent, industry and politics. Be sure to check it out :)
 
