--- a/index.html
+++ b/index.html
@@ -20,22 +20,13 @@
 
     <header>
   <h1><a href=" / " style="color:#2c3e50;">d^2</a></h1>
-  <a href=" / "><img src="images/othmane_sebbouh.png "></a>
+  <a href=" / "><img src="images/d^2.png "></a>
   <!--<h3>research scientist<br><small>at <a href="https://www.google.com/" title="Google">Google</a></small></h3>
   <h3>director (2018-2020)<br><small>of the <a href="https://iacr.org" title="IACR">IACR</a></small></h3>
   <h3>co-editor (since 2016)<br><small>of the <a href="https://eprint.iacr.org" title="ePrint">Cryptology ePrint Archive</a></small></h3>-->
   <ul>
     <li>
-      <a href="https://twitter.com/osebbouh" title="Twitter"><i class="fa fa-twitter"></i></a>
-    </li>
-    <li>
-      <a href="https://github.com/othmanesebbouh" title="Github"><i class="fa fa-github"></i></a>
-    </li>
-    <li>
-      <a href="https://www.linkedin.com/in/othmane-sebbouh-23487a119/" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
-    </li>
-    <li>
-      <a href="https://scholar.google.com/citations?user=0AMbUysAAAAJ&hl" title="Google scholar"><i class="fa fa-graduation-cap"></i></a>
+      <a href="https://www.youtube.com/channel/UCffPNnVsBaMsLJdseTbrLJg" title="Youtube"><i class="fa fa-youtube"></i></a>
     </li>
   </ul>
 </header>
@@ -50,40 +41,21 @@
 </section>
 <section>
   <h3>About me</h3>
-  <p> This is the webpage of the d^2 research group, part of the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford</a>, supervised by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a>.</p>
-
-  In the summer of 2021, I worked with <I> <a href="https://twitter.com/nathanbenaich" target=&ldquo;blank&rdquo;>Nathan Benaich</a></I> and <I> <a href="https://twitter.com/soundboy" target=&ldquo;blank&rdquo;>Ian Hogarth</a></I> on the <I> <a href="https://www.stateof.ai/" target=&ldquo;blank&rdquo;>State of AI Report 2021</a></I>. The State of AI Report analyses the most interesting developments in AI from four perspectives: research, talent, industry and politics. Be sure to check it out :)
+  <p> Hello ! My name is d^2, I'm a research group, part of the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford</a>, supervised by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a>. This is my webpage !</p>
 
 
-  <p> Before my PhD, I also had the chance to be supervised by <a href="https://gowerrobert.github.io" target=&ldquo;blank&rdquo;>Robert M. Gower</a> and <a href="https://perso.math.univ-toulouse.fr/cdossal/" target=&ldquo;blank&rdquo;>Charles Dossal</a> for two internships revolving around convex and stochastic optimization during my masters studies.
-
-  <p> I hold an MSc in management from <a href="https://www.essec.edu/en/" target=&ldquo;blank&rdquo;>ESSEC Business School</a> and a Master in Applied Mathematics from <a href="https://www.ensae.fr/en" target=&ldquo;blank&rdquo;>ENSAE</a> and <a href="https://www.polytechnique.edu/en" target=&ldquo;blank&rdquo;>Ecole Polytechnique.</a> 
-
-  
 </section>
 <section id="news">
   <h3>News</h3>
   <ul>
   	<li>
-      <strong>October 2021:</strong> The <I> <a href="https://www.stateof.ai/" target=&ldquo;blank&rdquo;>State of AI Report 2021</a></I> is out! Enjoyed every minute of working with <I> <a href="https://twitter.com/nathanbenaich" target=&ldquo;blank&rdquo;>Nathan Benaich</a></I> and <I> <a href="https://twitter.com/soundboy" target=&ldquo;blank&rdquo;>Ian Hogarth</a></I> this summer.
+      <strong>April 2022:</strong> Date of birth !
     </li>
-  	<li>
-      <strong>May 2021:</strong> Our paper, <I> <a href="https://arxiv.org/abs/2006.07867" target=&ldquo;blank&rdquo;>Almost sure convergence rates for Stochastic Gradient Descent and Stochastic Heavy Ball,</a></I> was accepted to <a href="http://learningtheory.org/colt2021/" target=&ldquo;blank&rdquo;>COLT.</a> Joint work with Robert M. Gower and <a href="https://www.aarondefazio.com/" target=&ldquo;blank&rdquo;>Aaron Defazio.</a> 
-    </li>
-  	<li>
-      <strong>January 2021:</strong> Our paper, <I> <a href="https://arxiv.org/abs/2006.11573" target=&ldquo;blank&rdquo;>SGD for structured nonconvex functions: Learning rates, minibatching and interpolation,</a></I> was accepted to <a href="https://aistats.org/aistats2021/" target=&ldquo;blank&rdquo;>AISTATS.</a> Joint work with Robert M. Gower and Nicolas Loizou.
-    </li>
-    <li>
-      <strong>January 2021:</strong> Updated <a href="https://arxiv.org/abs/2006.07867" target=&ldquo;blank&rdquo;>preprint:</a> <I> Almost sure convergence rates for Stochastic Gradient Descent and Stochastic Heavy Ball.</I> Joint work with Robert M. Gower and Aaron Defazio.</a> 
-    </li>
+
   
 </section>
 
     
-    <footer>
-  <p>hosted on GitHub Pages
-    <br>shamelessly copied from <a href="http://tlepoint.github.io/">Tancrède Lepoint's homepage.</a></p>
-</footer>
 <script src=" /javascripts/scale.fix.js "></script>
 <script>
 (function(i, s, o, g, r, a, m) {
