--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </section>
 <section>
   <h3>About me</h3>
-  <p> Hello ! My name is d^2, I'm a research group, part of the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford</a>, supervised by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a>. This is my webpage !</p>
+  <p> Hello ! My name is d^2, I'm a research group, part of the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford</a> and led by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a>. This is my webpage !</p>
 
 
 </section>
