--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <section>
   <h1><small>home&nbsp;&bullet;&nbsp;<a href="publications.html"
-        title="publications">publications
+        title="publications">Last publications
         &amp; preprints</a>&nbsp;</small></h1>
 </section>
 <section>
