--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
   <h3>co-editor (since 2016)<br><small>of the <a href="https://eprint.iacr.org" title="ePrint">Cryptology ePrint Archive</a></small></h3>-->
   <ul>
     <li>
-      <a href="https://twitter.com/osebbouh" title="Youtube"><i class="fa fa-youtube"></i></a>
+      <a href="https://www.youtube.com/channel/UCffPNnVsBaMsLJdseTbrLJg" title="Youtube"><i class="fa fa-youtube"></i></a>
     </li>
   </ul>
 </header>
