--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
 
     
 <section id="publications">
-  <h1><small><a href="index.html" title="home">home</a>&nbsp;&bullet;&nbsp;Last publications &amp; preprints&nbsp;</small></h1>
+  <h1><small><a href="index.html" title="home">home</a>&nbsp;&bullet;&nbsp;publications</small></h1>
   <ol>
 
 
@@ -362,25 +362,7 @@
   
 </li>
   
-
-   
-    <h3>2019</h3>
-    <li id="publications/svrg2019">
-  <strong>Towards closing the gap between the theory and practice of SVRG</strong>
-  <br> Othmane Sebbouh, Nidham Gazagnadou, Samy Jelassi, Francis Bach and Robert M. Gower
-  <br> <em>Neurips 2019</em> 
-  
-   &sc; <a href="http://papers.nips.cc/paper/8354-towards-closing-the-gap-between-the-theory-and-practice-of-svrg.pdf">proceedings</a>
-   &sc; <a href="https://arxiv.org/pdf/1908.02725.pdf">arXiv</a> 
-
-  
-   
-   
-   
-   
-  
-  
-</li>
+    
   
   </ol>
 </section>
