--- a/members.html
+++ b/members.html
@@ -33,7 +33,7 @@
 
     
 <section id="publications">
-  <h1><small><a href="index.html" title="home">home</a>&nbsp;&bullet;&nbsp;<a href="publications.html" title="publications">publications</a>&nbsp;&bullet;&nbsp;members</small></h1>
+  <h1><small><a href="index.html" title="home">home</a>&nbsp;&bullet;&nbsp;<a href="publications.html" title="publications">last publications</a>&nbsp;&bullet;&nbsp;team members</small></h1>
   <ol>
 
 
