--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     
 
 <section>
-  <h1><small>home&nbsp;&bullet;&nbsp;<a href="publications.html"
-        title="publications">Last publications
-        &amp; preprints</a>&nbsp;</small></h1>
+  <h1><small>home&nbsp;&bullet;&nbsp;<a href="publications.html"title="publications">last publications&nbsp;&bullet;&nbsp;<a href="members.html"title="team members">team members</small></h1>
 </section>
 <section>
   <h3>About me</h3>
