--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
 
     
 <section id="publications">
-  <h1><small><a href="index.html" title="home">home</a>&nbsp;&bullet;&nbsp;publications&nbsp;&bullet;&nbsp;<a href="members.html" title="team members">team members</a></small></h1>
+  <h1><small><a href="index.html" title="home">home</a>&nbsp;&bullet;&nbsp;last publications&nbsp;&bullet;&nbsp;<a href="members.html" title="team members">team members</a></small></h1>
   <ol>
 
 
