--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
   <h3>About me</h3>
   <p> Hello ! My name is d^2 (Doucet-Deligiannidis group), I'm a research group led by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a> in the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford</a>. This is my webpage !</p>
 
-  My research spans a number of topics in machine learning, including deep and Bayesian machine learning, generative modeling, computational statistics, statistical learning thoery, probability, optimization and Monte Carlo methods.
+  My research spans a number of topics in machine learning, generative modeling, computational statistics, learning theory, probability, optimization and Monte Carlo methods.
 
 </section>
 <section id="news">
   <h3>News</h3>
   <ul>
   	<li>
-      <strong>April 2022:</strong> Launch of my YouTube channel ! You can find <a href="https://www.youtube.com/channel/UCffPNnVsBaMsLJdseTbrLJg" target=&ldquo;blank&rdquo;>here</a> the recordings of the talks of the reading group. The goal of my weekly reading group is to present some recent works dealing with deep learning, sequential decision making, computational statistics, information theory, generative modeling, and their interdisciplinary connections.
+      <strong>April 2022:</strong> Launch of my YouTube channel ! You can find <a href="https://www.youtube.com/channel/UCffPNnVsBaMsLJdseTbrLJg" target=&ldquo;blank&rdquo;>here</a> the recordings of some talks of the reading group. The goal of my weekly reading group is to present some recent works dealing with deep learning, sequential decision making, approximate Bayesian inference, information theory, generative modeling, and their interdisciplinary connections.
     </li>
 
   
