--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <h3>About me</h3>
   <p> Hello ! My name is d^2 (Doucet-Deligiannidis group), I'm a research group led by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a> in the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford</a>. This is my webpage !</p>
 
-  My research spans a number of topics in machine learning, generative modeling, computational statistics, learning theory, probability, optimization and Monte Carlo methods.
+  My research spans a number of topics in computational statistics and machine learning, including deep learning, Bayesian inference, generative modeling, learning theory, probability, optimization and Monte Carlo methods.
 
 </section>
 <section id="news">
