--- a/members.html
+++ b/members.html
@@ -183,14 +183,14 @@
     <h3>Alumni</h3>
     
     <li id="publications/ode2020">
-  <strong>Anthony Caterini</strong>, PhD 2021 - Researcher at Layer 6, Toronto.
+  <strong>Anthony Caterini</strong>, PhD 2021 - now Researcher at Layer 6, Toronto
   
    &sc; <a href="https://scholar.google.co.uk/citations?user=34sCXQEAAAAJ">Google Scholar</a> 
 
 </li>
     
 <li id="publications/ode2020">
-  <strong>Valentin De Bortoli</strong>, Postdoc EPSRC Cosines 2020-2021, CNRS Researcher Ecole Normale Superieure Paris
+  <strong>Valentin De Bortoli</strong>, Postdoc EPSRC Cosines 2020-2021 - now CNRS Researcher at École Normale Supérieure Paris
   
    &sc; <a href="https://vdeborto.github.io/">Webpage</a> 
    &sc; <a href="https://scholar.google.fr/citations?user=dn_F9I4AAAAJ&hl=fr">Google Scholar</a> 
@@ -198,7 +198,7 @@
 </li>
 
 <li id="publications/ode2020">
-  <strong>Soufiane Hayou</strong>, PhD 2021, Assistant Professor, Department of Mathematics, National University of Singapore
+  <strong>Soufiane Hayou</strong>, PhD 2021 - now Assistant Professor in the Department of Mathematics at the National University of Singapore
   
    &sc; <a href="https://www.soufianehayou.com/">Webpage</a> 
    &sc; <a href="https://scholar.google.com/citations?user=JBb5zekAAAAJ&hl=en">Google Scholar</a> 
