--- a/publications.html
+++ b/publications.html
@@ -536,7 +536,7 @@
     
 <li id="publications/heavy_ball2020">
   <strong>Infinite-dimensional gradient-based descent for alpha-divergence minimisation</strong>
-  <br> A. Thin, Y. Janati El Idrissi, S. Le Corff, C. Ollion, E. Moulines, A. Doucet, A. Durmus and C.P. Robert
+  <br> K. Daudel, R. Douc and F. Portier
   <br> <em>Annals of Statistics</em> 
   
    &sc; <a href="https://kdaudel.github.io/publication/AOS2035.pdf">pdf</a> 
@@ -898,6 +898,16 @@
   <br> <em>ICLR Workshop on Neural Compression 2021</em> 
   
    &sc; <a href="https://arxiv.org/pdf/2103.03123.pdf">pdf</a> 
+   
+  
+</li>
+    
+<li id="publications/heavy_ball2020">
+  <strong>Lossless Compression using Continuously-Indexed Normalizing Flows</strong>
+  <br> A. Golinski, A.L. Caterini
+  <br> <em>ICLR Workshop on Neural Compression 2021</em> 
+  
+   &sc; <a href="https://openreview.net/pdf?id=s9mUgJ4JPJ">pdf</a> 
    
   
 </li>
