--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
   <h1><small>home&nbsp;&bullet;&nbsp;<a href="publications.html"title="publications">last publications</a>&nbsp;&bullet;&nbsp;<a href="members.html"title="team members">team members</a>&nbsp;</small></h1>
 </section>
 <section>
-  <h3>About me</h3>
-  <p> Hello ! My name is d^2 (Doucet-Deligiannidis group), I'm a research group led by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a> in the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford</a>. This is my webpage !</p>
+  <h3>About us</h3>
+  <p> Hello ! This is the official webpage of the d^2 (Doucet-Deligiannidis) group, a research group led by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a> in the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford</a></p>
 
-  My research spans a number of topics in computational statistics and machine learning, including deep learning, Bayesian inference, generative modeling, learning theory, probability, optimization and Monte Carlo methods.
+  Our research spans a number of topics in computational statistics and machine learning, including deep learning, Bayesian inference, generative modeling, learning theory, probability, optimization and Monte Carlo methods.
 
 </section>
 <section id="news">
   <h3>News</h3>
   <ul>
   	<li>
-      <strong>April 2022:</strong> Launch of my YouTube channel ! You can find <a href="https://www.youtube.com/channel/UCffPNnVsBaMsLJdseTbrLJg" target=&ldquo;blank&rdquo;>here</a> the recordings of some talks of the reading group. The goal of my weekly reading group is to present some recent works dealing with deep learning, sequential decision making, approximate Bayesian inference, information theory, generative modeling, and their interdisciplinary connections.
+      <strong>April 2022:</strong> Launch of our YouTube channel ! You can find <a href="https://www.youtube.com/channel/UCffPNnVsBaMsLJdseTbrLJg" target=&ldquo;blank&rdquo;>here</a> the recordings of some talks of the reading group. The goal of the weekly reading group is to present some recent works dealing with deep learning, sequential decision making, approximate Bayesian inference, information theory, generative modeling, and their interdisciplinary connections.
     </li>
 
   
