--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </section>
 <section>
   <h3>About us</h3>
-  <p> Hello ! This is the official webpage of the d^2 (Doucet-Deligiannidis) group, a research group led by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a> in the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford</a></p>
+  <p> Hello ! This is the official webpage of the d^2 (Doucet-Deligiannidis) group, a research group led by <a href="https://www.stats.ox.ac.uk/~doucet/" target=&ldquo;blank&rdquo;>Arnaud Doucet</a> and <a href="https://www.stats.ox.ac.uk/~deligian/#" target=&ldquo;blank&rdquo;>George Deligiannidis</a> in the <a href="https://www.stats.ox.ac.uk/" target=&ldquo;blank&rdquo;>Department of Statistics at the University of Oxford.</a></p>
 
   Our research spans a number of topics in computational statistics and machine learning, including deep learning, Bayesian inference, generative modeling, learning theory, probability, optimization and Monte Carlo methods.
 
