--- a/publications.html
+++ b/publications.html
@@ -19,7 +19,7 @@
 
     <header>
   <h1><a href=" / " style="color:#2c3e50;">d^2</a></h1>
-  <a href=" / "><img src="d^2.png "></a>
+  <a href=" / "><img src="logo_oxcsml.jpeg"></a>
   <ul>
     <li>
       <a href="https://www.youtube.com/channel/UCffPNnVsBaMsLJdseTbrLJg" title="Youtube"><i class="fa fa-youtube"></i></a>
