--- a/publications.html
+++ b/publications.html
@@ -658,7 +658,7 @@
     
 <li id="publications/publi_since_2021">
   <strong>Lithological Tomography with the Correlated Pseudo-Marginal Method</strong>
-  <br> L. Freidli, N. Linde, D. Ginsbourger and A. Doucet
+  <br> L. Friedli, N. Linde, D. Ginsbourger and A. Doucet
   <br> <em>Geophysical Journal International</em> 
   
    &sc; <a href="https://www.stats.ox.ac.uk/~doucet/FriedliLindeGinsbourgerDoucet_lithologicaltomographycorrelatedpseudomarginal.pdf">pdf</a> 
