--- a/publications.html
+++ b/publications.html
@@ -216,7 +216,7 @@
 
 <li id="publications/publi_since_2021">
   <strong>Monotonic alpha-divergence minimisation</strong>
-  <br> K. Daudel, R. Douc and F. Roueff
+  <br> K. Daudell, R. Douc and F. Roueff
   
    &sc; <a href="https://arxiv.org/pdf/2103.05684.pdf">pdf</a> 
    
