--- a/publications.html
+++ b/publications.html
@@ -58,6 +58,19 @@
   
   
 </li>
+
+
+  
+
+<li id="publications/publi_since_2021">
+  <strong>A Continuous Time Framework for Discrete Denoising Models</strong>
+  <br> A. Campbell, J. Benton, V. De Bortoli, T. Rainforth, G. Deligiannidis and Arnaud Doucet
+  
+   &sc; <a href="https://arxiv.org/pdf/2205.14987.pdf">pdf</a> 
+   
+  
+  
+</li>
     
 
 <li id="publications/publi_since_2021">
