--- a/members.html
+++ b/members.html
@@ -101,7 +101,11 @@
     <li id="people/since_2021">
   <strong>Joe Benton</strong>, PhD CDT 1st year
   
+   &sc; <a href="https://joejbenton.com/">Webpage</a> 
+   &sc; <a href="https://scholar.google.com/citations?user=ywp_eYsAAAAJ">Google Scholar</a> 
+
 </li>
+
 
 <li id="people/since_2021">
   <strong>Andrew Campbell</strong>, PhD CDT 2nd year, (co-supervisor: Tom Rainforth)
