--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@
 
 <li id="publications/publi_since_2021">
   <strong>A Continuous Time Framework for Discrete Denoising Models</strong>
-  <br> A. Campbell, J. Benton, V. De Bortoli, T. Rainforth, G. Deligiannidis and Arnaud Doucet
+  <br> A. Campbell, J. Benton, V. De Bortoli, T. Rainforth, G. Deligiannidis and A. Doucet
   
    &sc; <a href="https://arxiv.org/pdf/2205.14987.pdf">pdf</a> 
    
